[package]
name = "buttplug-mlua"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
buttplug = { version = "8.0.0", default-features = false, features = ["tokio-runtime", "client", "serialize-json", "websockets"]}
lazy_static = "1.4.0"
mlua = { version = "0.9.8", features = ["lua54", "async", "macros", "vendored"] }
once_cell = "1.19.0"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "sync"] }
